# tableExtraction

./: README.md  pyproject.toml  run.sh
gateway/: server.py
gateway/clients/: clients_instances.py
gateway/controllers/: converter_controller.py  detector_controller.py  extractor_controller.py  general_controller.py
gateway/dto/: coordinates_dto.py  extractor_dto.py  image_dto.py  pdf_dto.py
gateway/services/: converter.py  detector.py  extractor.py  general.py
protos/: pdf_table_converter.proto  pdf_table_detector.proto  pdf_table_extractor.proto
services/converter/: consts.py  converter_service.py  image_store.py  utils.py
services/detector/: consts.py  detector_function.py  detector_service.py  model.py
services/extractor/: consts.py  extractor_function.py  extractor_service.py  utils.py
