[tool.poetry]
name = "table_extraction"
version = "1.0.0"
description = "Table Extraction System"
authors = ["Sergei <kolesniksn2510@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
setuptools = "^67.6.1"
grpcio = "1.44.0"
grpcio-tools = "1.44.0"
pdf2image = "^1.16.3"
requests = "^2.28.2"
tabula-py = "^2.7.0"
python-multipart = "^0.0.6"
poppler-utils = "^0.1.0"
imagekitio = "^3.0.1"
openmim = "^0.3.7"
timm = "^0.6.13"
transformers = "^4.27.4"
pypdf2 = "2.12.1"
gspread = "^5.8.0"
camelot-py = "0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"